hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__access_struct_field_read.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "S",
            IdentId(2) => "field",
            IdentId(3) => "boolean",
            IdentId(4) => "s",
            IdentId(5) => "core",
            IdentId(6) => "add",
            IdentId(7) => "div",
            IdentId(8) => "eq",
            IdentId(9) => "ge",
            IdentId(10) => "gt",
            IdentId(11) => "le",
            IdentId(12) => "lt",
            IdentId(13) => "mul",
            IdentId(14) => "neg",
            IdentId(15) => "neq",
            IdentId(16) => "number",
            IdentId(17) => "sub",
            IdentId(18) => "void",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(3),
                    span: 1:19; [18, 25],
                    bound: Bound(6),
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:41; [40, 45],
                    bound: Bound(20),
                },
            },
            IdentRefId(2) => IdentifierRef {
                id: IdentRefId(2),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:37; [36, 37],
                    bound: Bound(3),
                },
            },
            IdentRefId(3) => IdentifierRef {
                id: IdentRefId(3),
                ident: Identifier {
                    id: IdentId(4),
                    span: 1:59; [58, 59],
                    bound: Bound(21),
                },
            },
            IdentRefId(4) => IdentifierRef {
                id: IdentRefId(4),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:61; [60, 65],
                    bound: Bound(20),
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Boolean(true),
                        span: 1:48; [47, 51],
                    },
                ),
                span: 1:48; [47, 51],
                typed: Typed(3),
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: StructInstantiation(
                    IdentRefId(2),
                    [],
                    [
                        (
                            IdentRefId(1),
                            ExprId(0),
                        ),
                    ],
                ),
                span: 1:37; [36, 53],
                typed: Typed(6),
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(3),
                        span: 1:59; [58, 59],
                    },
                ),
                span: 1:59; [58, 59],
                typed: Typed(6),
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Access(
                    ExprId(2),
                    IdentRefId(4),
                ),
                span: 1:59; [58, 65],
                typed: Typed(3),
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: Block(
                    [],
                ),
                span: 1:67; [66, 69],
                typed: Typed(1),
            },
            ExprId(5) => Expression {
                id: ExprId(5),
                kind: If(
                    ExprId(3),
                    ExprId(4),
                    None,
                ),
                span: 1:56; [55, 69],
                typed: Typed(1),
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        bound: Bound(1),
                    },
                    InputId(0),
                    [
                        StmtId(1),
                        StmtId(2),
                        StmtId(3),
                        StmtId(4),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Struct(
                    Identifier {
                        id: IdentId(1),
                        span: 1:8; [7, 8],
                        bound: Bound(3),
                    },
                    [],
                    [],
                    Provided(
                        [
                            Field {
                                identifier: Identifier {
                                    id: IdentId(2),
                                    span: 1:12; [11, 16],
                                    bound: Bound(20),
                                },
                                type_def_id: TypeDefId(0),
                                span: 1:12; [11, 25],
                                typed: Typed(3),
                            },
                        ],
                    ),
                    None,
                ),
                span: 1:1; [0, 27],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Let(
                    Identifier {
                        id: IdentId(4),
                        span: 1:33; [32, 33],
                        bound: Bound(21),
                    },
                    ExprId(1),
                ),
                span: 1:29; [28, 54],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Expression(
                    ExprId(5),
                ),
                span: 1:56; [55, 69],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Namespace(
                    Identifier {
                        id: IdentId(5),
                        span: 2:11; [80, 84],
                        bound: Bound(2),
                    },
                    InputId(0),
                    [],
                ),
                span: 2:17; [86, 87],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                    ],
                ),
                span: 1:19; [18, 25],
            },
        ],
        root: StmtId(0),
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: Namespace(
                    IdentId(0),
                    {
                        IdentId(1): [
                            SymbolId(3),
                        ],
                        IdentId(5): [
                            SymbolId(2),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: Namespace(
                    IdentId(5),
                    {
                        IdentId(3): [
                            SymbolId(6),
                        ],
                        IdentId(6): [
                            SymbolId(19),
                        ],
                        IdentId(7): [
                            SymbolId(18),
                        ],
                        IdentId(8): [
                            SymbolId(16),
                            SymbolId(17),
                        ],
                        IdentId(9): [
                            SymbolId(15),
                        ],
                        IdentId(10): [
                            SymbolId(14),
                        ],
                        IdentId(11): [
                            SymbolId(13),
                        ],
                        IdentId(12): [
                            SymbolId(12),
                        ],
                        IdentId(13): [
                            SymbolId(11),
                        ],
                        IdentId(14): [
                            SymbolId(10),
                        ],
                        IdentId(15): [
                            SymbolId(8),
                            SymbolId(9),
                        ],
                        IdentId(16): [
                            SymbolId(5),
                        ],
                        IdentId(17): [
                            SymbolId(7),
                        ],
                        IdentId(18): [
                            SymbolId(4),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: Struct(
                    IdentId(1),
                    StmtId(1),
                ),
                type_id: TypeId(6),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: NativeType(
                    IdentId(18),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(16),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: NativeType(
                    IdentId(3),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(17),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(9),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(10),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(9),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(7),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(6),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: Field(
                    IdentId(2),
                    StmtId(1),
                    0,
                ),
                type_id: TypeId(3),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: Let(
                    IdentId(4),
                    StmtId(2),
                ),
                type_id: TypeId(6),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Type,
            TypeId(6) => Struct(
                StmtId(1),
            ),
            TypeId(7) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(9) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(10) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {},
            unreachable: [],
        },
    },
)
