hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__access_unqualified_annotation.snap
---
source: hir/src/passes/resolver.rs
expression: "UnresolvedHir ::\nfrom(compilation_unit.into_ast().unwrap()).resolve(Natives :: new())"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Identifier 'b' not found",
                span: 5:10; [68, 69],
                level: Error,
            },
        ],
        inputs: (),
    },
)
